Add Coveralls support

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 script:
-  - "./sbt test"
+  - "./sbt clean coverage test"
+after_success: "./sbt coveralls"
+
 language: scala
+
 scala:
    - 2.10.4
    - 2.11.5
