--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,10 @@ scala:
 jdk:
   - openjdk7
   - oraclejdk7
+
+# Workaround for Travis CI issue 5227, which results in a buffer overflow
+# caused by Java when running the build on OpenJDK.
+# https://github.com/travis-ci/travis-ci/issues/5227
+# https://docs.travis-ci.com/user/hostname
+addons:
+  hostname: short-hostname
