Use openjdk8 in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ scala:
    - 2.11.12
 
 jdk:
-  - oraclejdk8
+  - openjdk8
 
 # Workaround for Travis CI issue 5227, which results in a buffer overflow
 # caused by Java when running the build on OpenJDK.
